--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
 
     - name: Build Tailwind CSS
-      run: npx tailwindcss -i ./src/styles.css -o ./dist/styles.css --minify
+      run: npx tailwindcss -c ./tailwind.config.js -i ./src/styles.css -o ./dist/styles.css --minify
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
